fix for jumping tabs on help click

--- a/src/assets/styles/components/general/header.scss
+++ b/src/assets/styles/components/general/header.scss
@@ -212,5 +212,9 @@ p {
     .v-btn:active {
       border: 2px solid rgb(15, 113, 203);
     }
+
+    .v-btn {
+      border: 2px solid rgb(254, 255, 254);
+    }
   }
 }
